--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SEDONA</title>
 </head>
 <body>
-    
+    <header class="header">
+
+    </header>
+    <main>
+        <section class="hero">
+
+        </section>
+        <section class="about_town">
+
+        </section>
+        <section class="about_nature">
+
+        </section>
+        <section class="hotel">
+
+        </section>
+        
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
