add header nav markup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 <body>
     <header class="header">
 
+        <nav class="header_nav">
+            <ul class="nav_list">
+                <li class="nav_list-item"><a class="nav_link" href="blank.html">Информация</a></li>
+                <li class="nav_list-item"><a class="nav_link" href="blank.html">Фото и видео</a></li>
+            </ul>
+            <a>
+            <img src="https://via.placeholder.com/138x70" alt="Sedona_logo" class="logo">
+            </a>
+            <ul class="nav_list">
+                <li class="nav_list-item"><a class="nav_link" href="blank.html">Карта штата</a></li>
+                <li class="nav_list-item"><a class="nav_link" href="hotels.html">Гостинницы</a></li>
+            </ul>
+        </nav>
+
     </header>
     <main>
         <section class="hero">
