add section hero

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <main>
         <section class="hero">
 
+            <h1 class="hidden_title">Добро пожаловать в Седону</h1>
+            <span>Welcome</span>
+            <span>to the gordeous</span>
+            <span>Sedona</span>
+            <q>Because the Great Canyon sucks!</q>
+            <span>Седона — небольшой городок в Аризоне, заслуживающий большего!</span>
+
         </section>
         <section class="about_town">
 
