started section about town

--- a/index.html
+++ b/index.html
@@ -35,12 +35,46 @@
             <span>Седона — небольшой городок в Аризоне, заслуживающий большего!</span>
 
         </section>
+
         <section class="about_town">
 
-        </section>
-        <section class="about_nature">
+            <h2 class="hidden_title">Почему Седона?</h2>
+            <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+
+            <ul class="town_desc-list">
+
+                <li class="town_desk_list_item">
+                    <h3>Небольшой городок</h3>
+                    <span>№1</span>
+                    <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                    <img src="https://via.placeholder.com/800x258" alt="Отель в Седоне">
+                    <ul class="town_advantages_list">
+                        <li class="advantages_list_item">
+                            <img src="https://via.placeholder.com/75x72" alt="Мотель" class="item_icon">
+                            <h4>Жилье</h4>
+                            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                        </li>
+                        <li class="advantages_list_item">
+                            <img src="https://via.placeholder.com/75x70" alt="Бургер" class="item_icon">
+                            <h4>Еда</h4>
+                            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                        </li>
+                        <li class="advantages_list_item">
+                            <img src="https://via.placeholder.com/64x77" alt="Подарок" class="item_icon">
+                            <h4>Сувениры</h4>
+                            <p>Не только китайского, но и местного производства!</p>
+                        </li>
+                    </ul>
+                </li>
+                
+                <li class="town_desk_list_item"></li>
+                <li class="town_desk_list_item"></li>
+                <li class="town_desk_list_item"></li>
+                <li class="town_desk_list_item"></li>
+            </ul>
 
         </section>
+        
         <section class="hotel">
 
         </section>
