finished section about town

--- a/index.html
+++ b/index.html
@@ -67,10 +67,30 @@
                     </ul>
                 </li>
                 
-                <li class="town_desk_list_item"></li>
-                <li class="town_desk_list_item"></li>
-                <li class="town_desk_list_item"></li>
-                <li class="town_desk_list_item"></li>
+                <li class="town_desk_list_item">
+                    <img src="https://via.placeholder.com/800x256" alt="Местная природа">
+                    <h3>Там есть Мост дьявола</h3> 
+                    <span>№2</span>
+                    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p> 
+                </li>
+
+                <li class="town_desk_list_item">
+                    <h3>Небольшая площадь</h3> 
+                    <span>№3</span>
+                    <p>Все достопримечательности находятся очень близко</p>
+                </li>
+
+                <li class="town_desk_list_item">
+                    <h3>Красивая дорога</h3> 
+                    <span>№4</span>
+                    <p>Ехать в седону из лас-вегаса совсем не скучно!</p>
+                </li>
+
+                <li class="town_desk_list_item">
+                    <h3>Мало туристов</h3> 
+                    <span>№5</span>
+                    <p>Большинство едет в гранд каньон и толпится там</p>
+                </li>
             </ul>
 
         </section>
