add: footer markup

--- a/index.html
+++ b/index.html
@@ -96,10 +96,39 @@
         </section>
         
         <section class="hotel">
-
+            <h3 class="hidden_ttile">А что с жильем?</h3>
+            <p>Заинтересовались?</p>
+            <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+            <button>Поиск гостинницы в Седоне</button>
+            <div class="map">А здесь будет карта</div>
         </section>
         
     </main>
-    <footer class="footer"></footer>
+
+    <footer class="footer">
+
+        <ul class="contacts">
+            <li class="contacts_item">#visitsedona</li>
+            <li class="contacts_item"><a href="tel:88005558628">+7 800 555-86-28</a></li>
+        </ul>
+
+        <ul class="social_list">
+            <li class="social_item">
+                <img src="https://via.placeholder.com/46x48" alt="Twitter">
+            </li>
+            <li class="social_item">
+                <img src="https://via.placeholder.com/46x48" alt="Facebook">
+            </li>
+            <li class="social_item">
+                <img src="https://via.placeholder.com/46x48" alt="Youtube">
+            </li>
+        </ul>
+
+        <div class="copyright">
+            <span>Website by</span>
+            <img src="https://via.placeholder.com/115x33" alt="HTML Academy">
+        </div>
+
+    </footer>
 </body>
 </html>
