Add sorting and tables

--- a/hotels.html
+++ b/hotels.html
@@ -76,6 +76,97 @@
               </form>
         </section>
         <section class="results">
+            <div class="sorting_bar">
+
+                <div class="results_amount">
+                <span>Найдено:</span>
+                <output>3</output>
+                </div>
+
+                <div class="sorting_btns">
+                    <span>Сортировка</span>
+                    <button>По цене</button>
+                    <button>По типу</button>
+                    <button>По рейтингу</button>
+                </div>
+
+                <div class="reverse_btns">
+                    <button class="reverse"></button>
+                    <button class="unreverse"></button>
+                </div>
+            </div>
+
+            <table>
+
+                <tr>
+                    <td rowspan="3"><img src="https://via.placeholder.com/135x90" alt="Amara Resort & Spa"></td>
+                    <td colspan="2">Amara Resort & Spa</td>
+                    <td>Stars</td>
+                </tr>
+
+                <tr>
+                    <td>Гостинница</td>
+                    <td>от 4000 Р</td>
+                </tr>
+
+                <tr>
+                    <td><button>Подробнее</button></td>
+                    <td><button>Забронировать</button></td>
+                    <td>
+                        <span>Рейтинг: 8,5</span>
+                        <output></output>
+                    </td>
+                </tr>
+
+            </table>
+
+            <table>
+
+                <tr>
+                    <td rowspan="3"><img src="https://via.placeholder.com/135x90" alt="Desert Quail Inn"></td>
+                    <td colspan="2">Desert Quail Inn</td>
+                    <td>Stars</td>
+                </tr>
+
+                <tr>
+                    <td>Мотель</td>
+                    <td>от 3000 Р</td>
+                </tr>
+
+                <tr>
+                    <td><button>Подробнее</button></td>
+                    <td><button>Забронировать</button></td>
+                    <td>
+                        <span>Рейтинг: 8,9</span>
+                        <output></output>
+                    </td>
+                </tr>
+
+            </table>
+
+            <table>
+
+                <tr>
+                    <td rowspan="3"><img src="https://via.placeholder.com/135x90" alt="Villas at Poco Diablo"></td>
+                    <td colspan="2">Villas at Poco Diablo</td>
+                    <td>Stars</td>
+                </tr>
+
+                <tr>
+                    <td>Апартаменты</td>
+                    <td>от 2000 Р</td>
+                </tr>
+
+                <tr>
+                    <td><button>Подробнее</button></td>
+                    <td><button>Забронировать</button></td>
+                    <td>
+                        <span>Рейтинг: 9.2</span>
+                        <output></output>
+                    </td>
+                </tr>
+
+            </table>
         </section>
     </main>
 
