added images to index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="nav_list-item"><a class="nav_link" href="blank.html">Фото и видео</a></li>
             </ul>
             <a>
-            <img src="https://via.placeholder.com/138x70" alt="Sedona_logo" class="logo">
+            <img src="/img/logo.svg" alt="Sedona_logo" class="logo" width="138" height="70">
             </a>
             <ul class="nav_list">
                 <li class="nav_list-item"><a class="nav_link" href="blank.html">Карта штата</a></li>
@@ -30,10 +30,14 @@
     </header>
     <main>
         <section class="hero">
+            <img src="/img/header_bg.jpg" alt="beautiful mountains" width="1200" height="509">
 
             <h1 class="hidden_title">Добро пожаловать в Седону</h1>
+            <img src="/img/Welcome.png" alt="Welcome" width="187.74" height="44.75">
             <span>Welcome</span>
+            <img src="/img/gorgeous.png" alt="to the gorgeous" width="255.95" height="28.8">
             <span>to the gordeous</span>
+            <img src="/img/Sedona.png" alt="Sedona" width="456.65" height="213.03">
             <span>Sedona</span>
             <q>Because the Great Canyon sucks!</q>
             <span>Седона — небольшой городок в Аризоне, заслуживающий большего!</span>
@@ -51,20 +55,21 @@
                     <h3>Небольшой городок</h3>
                     <span>№1</span>
                     <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                    <img src="https://via.placeholder.com/800x258" alt="Отель в Седоне">
+                    <img src="/img/sedona-street.jpg" alt="Отель в Седоне" width="800" height="
+                    256">
                     <ul class="town_advantages_list">
                         <li class="advantages_list_item">
-                            <img src="https://via.placeholder.com/75x72" alt="Мотель" class="item_icon">
+                            <img src="/img/icons/house-icon.svg" alt="Мотель" class="item_icon" width="75" height="72">
                             <h4>Жилье</h4>
                             <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                         </li>
                         <li class="advantages_list_item">
-                            <img src="https://via.placeholder.com/75x70" alt="Бургер" class="item_icon">
+                            <img src="/img/icons/food-icon.svg" alt="Бургер" class="item_icon" width="75" height="70">
                             <h4>Еда</h4>
                             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                         </li>
                         <li class="advantages_list_item">
-                            <img src="https://via.placeholder.com/64x77" alt="Подарок" class="item_icon">
+                            <img src="/img/icons/gift-icon.svg" alt="Подарок" class="item_icon" width="64" height="77">
                             <h4>Сувениры</h4>
                             <p>Не только китайского, но и местного производства!</p>
                         </li>
@@ -72,7 +77,7 @@
                 </li>
                 
                 <li class="town_desk_list_item">
-                    <img src="https://via.placeholder.com/800x256" alt="Местная природа">
+                    <img src="/img/sedona-mountains.jpg" alt="Местная природа" width="800" height="256">
                     <h3>Там есть Мост дьявола</h3> 
                     <span>№2</span>
                     <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p> 
@@ -110,6 +115,7 @@
     </main>
 
     <footer class="footer">
+        <img src="/img/footer-map.png" alt="Карта окрестностей Седоны" width="1199" height="594px">
 
         <ul class="contacts">
             <li class="contacts_item">#visitsedona</li>
@@ -118,19 +124,28 @@
 
         <ul class="social_list">
             <li class="social_item">
-                <img src="https://via.placeholder.com/46x48" alt="Twitter">
+                <svg width="46" height="48" viewBox="0 0 46 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="46" height="48" fill="#81B3D2"/>
+                    </svg>
+                <img src="/img/social/twitter.png" alt="Twitter" width="17" height="17">
             </li>
             <li class="social_item">
-                <img src="https://via.placeholder.com/46x48" alt="Facebook">
+                <svg width="46" height="48" viewBox="0 0 46 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="46" height="48" fill="#81B3D2"/>
+                    </svg>
+                <img src="/img/social/fb-icon.png" alt="Facebook" width="12" height="22">
             </li>
             <li class="social_item">
-                <img src="https://via.placeholder.com/46x48" alt="Youtube">
+                <svg width="46" height="48" viewBox="0 0 46 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="46" height="48" fill="#81B3D2"/>
+                    </svg>
+                <img src="/img/social/youtube.png" alt="Youtube" width="20" height="16">
             </li>
         </ul>
 
         <div class="copyright">
             <span>Website by</span>
-            <img src="https://via.placeholder.com/115x33" alt="HTML Academy">
+            <img src="/img/logo_htmlacademy.png" alt="HTML Academy" width="115" height="33">
         </div>
 
     </footer>
